--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
 - TOXENV=py27
 - TOXENV=py26
 - TOXENV=pypy
-install: pip install --upgrade pip && pip install -U tox
+install: "pip install --upgrade pip && pip install -U tox && pip install -r requirements.txt"
 language: python
 python: 2.7
 script: tox -e ${TOXENV}
