--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,33 @@ deploy:
   provider: pypi
   user: biracruz
 env:
-- TOXENV=py35
-- TOXENV=py34
-- TOXENV=py33
 - TOXENV=py27
 - TOXENV=py26
 - TOXENV=pypy
-install: "pip install --upgrade pip && pip install -U tox && pip install -r requirements.txt"
+install: 
+  - sudo apt-get update
+  # We do this conditionally because it saves us some downloading if the
+  # version is the same.
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+
+  # Replace dep1 dep2 ... with your dependencies
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy scipy gdal ...
+  - source activate test-environment
+  - python setup.py install
+  - pip install --upgrade pip && pip install -U tox
+
+
 language: python
 python: 2.7
 script: tox -e ${TOXENV}
