--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,10 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy scipy gdal tox
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy scipy gdal
   - source activate test-environment
   - python setup.py install
+  - pip install -U tox
 
 
 language: python
