--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -p  -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy scipy gdal virtualenv
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy scipy gdal virtualenv
   - source activate test-environment
   - python setup.py install
   - virtualenv py27
