--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,9 @@ install:
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
-  # Useful for debugging any issues with conda
   - conda info -a
-
-  # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n py27 python=$TRAVIS_PYTHON_VERSION pip numpy scipy gdal ctox
+  - conda create -q -n py27 python=$TRAVIS_PYTHON_VERSION pip numpy scipy gdal
+  - conda install --channel https://conda.anaconda.org/jesserobertson ctox
 
 language: python
 python: 2.7
