--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,7 @@
 [tox]
-envlist = testenv
-
 commands = python setup.py test
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
-deps =
-    -r{toxinidir}/test_requirements.txt
+; deps =
+;     -r{toxinidir}/test_requirements.txt
